16_8_21/npmCommands.txt
Microsoft Windows [Version 10.0.18363.1621]
(c) 2019 Microsoft Corporation. All rights reserved.

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>tsc sample.ts

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>node sample.js

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>tsc namespdemo.ts

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>node namespdemo.js
calculating..

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>tsc tscript_7_1.ts

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>node tscript_7_1.js

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>tsc tscript_7_2.ts

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>node tscript_7_2.js
55
24

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>tsc sample.ts

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>node sample.js

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>tsc namespdemo.ts

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>node namespdemo.js
calculating..
calculating intrest

C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>tsc Data.ts
error TS6053: File 'Data.ts' not found.
  The file is in the program because:
    Root file specified for compilation


Found 1 error.


C:\Users\d976640\Desktop\M1W4\16_8_21\namespacedemo>cd ..

C:\Users\d976640\Desktop\M1W4\16_8_21>tsc Data.ts

C:\Users\d976640\Desktop\M1W4\16_8_21>node Data.js
Hello World

C:\Users\d976640\Desktop\M1W4\16_8_21>tsc Data.ts
Data.ts:7:5 - error TS2322: Type 'string' is not assignable to type 'number'.

7 var b:number=getData<string>('hello')
      ~


Found 1 error.


C:\Users\d976640\Desktop\M1W4\16_8_21>tsc Data.ts
Data.ts:7:5 - error TS2322: Type 'string' is not assignable to type 'number'.

7 var b:number=getData<string>('hello')
      ~


Found 1 error.


C:\Users\d976640\Desktop\M1W4\16_8_21>node Data.js
Hello World
hello
100

C:\Users\d976640\Desktop\M1W4\16_8_21>tsc Data.ts
Data.ts:7:5 - error TS2322: Type 'string' is not assignable to type 'number'.

7 var b:number=getData<string>('hello')
      ~

Data.ts:12:7 - error TS2304: Cannot find name 'Type'.

12     t:Type
         ~~~~

Data.ts:16:15 - error TS2304: Cannot find name 'Type'.

16     setData(t:Type){
                 ~~~~


Found 3 errors.


C:\Users\d976640\Desktop\M1W4\16_8_21>node Data.js
Hello World
hello
100
hey

C:\Users\d976640\Desktop\M1W4\16_8_21>tsc Data2.ts

C:\Users\d976640\Desktop\M1W4\16_8_21>node Data2.js
{ value1: 23, value2: 'hey' }

C:\Users\d976640\Desktop\M1W4\16_8_21>tsc Data2.ts

C:\Users\d976640\Desktop\M1W4\16_8_21>node Data2.js
{ value1: 23, value2: 'hey', type1: 'number', type2: 'string' }

C:\Users\d976640\Desktop\M1W4\16_8_21>node asyncdemo.js
internal/modules/cjs/loader.js:892
  throw err;
  ^

Error: Cannot find module 'C:\Users\d976640\Desktop\M1W4\16_8_21\asyncdemo.js'
[90m    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:889:15)[39m
[90m    at Function.Module._load (internal/modules/cjs/loader.js:745:27)[39m
[90m    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)[39m
[90m    at internal/main/run_main_module.js:17:47[39m {
  code: [32m'MODULE_NOT_FOUND'[39m,
  requireStack: []
}

C:\Users\d976640\Desktop\M1W4\16_8_21>dir
 Volume in drive C is OS
 Volume Serial Number is 7C79-4B61

 Directory of C:\Users\d976640\Desktop\M1W4\16_8_21

16/08/2021  09:53 AM    <DIR>          .
16/08/2021  09:53 AM    <DIR>          ..
16/08/2021  09:48 AM               543 Data.js
16/08/2021  09:48 AM               469 Data.ts
16/08/2021  09:54 AM               422 Data2.js
16/08/2021  09:53 AM               399 Data2.ts
16/08/2021  10:15 AM    <DIR>          namespacedemo
16/08/2021  09:41 AM               258 nongenericdemo.ts
               5 File(s)          2,091 bytes
               3 Dir(s)  168,180,654,080 bytes free

C:\Users\d976640\Desktop\M1W4\16_8_21>node asyncdemo.js
C:\Users\d976640\Desktop\M1W4\16_8_21\asyncdemo.js:2
    return await "Message"
    ^^^^^^

SyntaxError: Unexpected token 'return'
[90m    at wrapSafe (internal/modules/cjs/loader.js:988:16)[39m
[90m    at Module._compile (internal/modules/cjs/loader.js:1036:27)[39m
[90m    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1101:10)[39m
[90m    at Module.load (internal/modules/cjs/loader.js:937:32)[39m
[90m    at Function.Module._load (internal/modules/cjs/loader.js:778:12)[39m
[90m    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)[39m
[90m    at internal/main/run_main_module.js:17:47[39m

C:\Users\d976640\Desktop\M1W4\16_8_21>cd nodeproject

C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm list
myserverproject@1.0.0 C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject
`-- (empty)


C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm list -g
C:\Users\d976640\AppData\Roaming\npm
+-- http-server@13.0.0
| +-- basic-auth@1.1.0
| +-- colors@1.4.0
| +-- corser@2.0.1
| +-- he@1.2.0
| +-- http-proxy@1.18.1
| | +-- eventemitter3@4.0.7
| | +-- follow-redirects@1.14.1
| | `-- requires-port@1.0.0
| +-- mime@1.6.0
| +-- minimist@1.2.5
| +-- opener@1.5.2
| +-- portfinder@1.0.28
| | +-- async@2.6.3
| | | `-- lodash@4.17.21
| | +-- debug@3.2.7
| | | `-- ms@2.1.3
| | `-- mkdirp@0.5.5
| |   `-- minimist@1.2.5 deduped
| +-- secure-compare@3.0.1
| +-- union@0.5.0
| | `-- qs@6.10.1
| |   `-- side-channel@1.0.4
| |     +-- call-bind@1.0.2
| |     | +-- function-bind@1.1.1
| |     | `-- get-intrinsic@1.1.1 deduped
| |     +-- get-intrinsic@1.1.1
| |     | +-- function-bind@1.1.1 deduped
| |     | +-- has@1.0.3
| |     | | `-- function-bind@1.1.1 deduped
| |     | `-- has-symbols@1.0.2
| |     `-- object-inspect@1.11.0
| `-- url-join@2.0.5
`-- typescript@4.3.5


C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm install prompt-sync
npm notice created a lockfile as package-lock.json. You should commit this file.
npm WARN myserverproject@1.0.0 No repository field.

+ prompt-sync@4.2.0
added 3 packages from 3 contributors and audited 3 packages in 2.239s
found 0 vulnerabilities


C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm list
myserverproject@1.0.0 C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject
`-- prompt-sync@4.2.0
  `-- strip-ansi@5.2.0
    `-- ansi-regex@4.1.0


C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm uninstall prompt-sync
npm WARN myserverproject@1.0.0 No repository field.

removed 3 packages in 0.636s
found 0 vulnerabilities


C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm list
myserverproject@1.0.0 C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject
`-- (empty)


C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm install prompt-sync
npm WARN myserverproject@1.0.0 No repository field.

+ prompt-sync@4.2.0
added 3 packages from 3 contributors and audited 3 packages in 1.043s
found 0 vulnerabilities


C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm update prompt-sync

C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm run
Lifecycle scripts included in myserverproject:
  test
    echo "Error: no test specified" && exit 1

C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>node start
internal/modules/cjs/loader.js:892
  throw err;
  ^

Error: Cannot find module 'C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject\start'
[90m    at Function.Module._resolveFilename (internal/modules/cjs/loader.js:889:15)[39m
[90m    at Function.Module._load (internal/modules/cjs/loader.js:745:27)[39m
[90m    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:76:12)[39m
[90m    at internal/main/run_main_module.js:17:47[39m {
  code: [32m'MODULE_NOT_FOUND'[39m,
  requireStack: []
}

C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm run
Lifecycle scripts included in myserverproject:
  test
    echo "Error: no test specified" && exit 1

available via `npm run-script`:
  myrun
    echo Hello user

C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm run myrun

> myserverproject@1.0.0 myrun C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject
> echo Hello user

Hello user

C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm run
Lifecycle scripts included in myserverproject:
  test
    echo "Error: no test specified" && exit 1

available via `npm run-script`:
  myrun
    echo Hello user
  myrun2
    node index.js

C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>npm run myrun2

> myserverproject@1.0.0 myrun2 C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject
> node index.js

hello u

C:\Users\d976640\Desktop\M1W4\16_8_21\nodeproject>